--- a/style.css
+++ b/style.css
@@ -25,9 +25,35 @@ button {
 }
 .card {
     background-color: lightgray;
-    margin-bottom: 20px; /* Add space between cards */
+    margin-bottom: 20px; 
 }
 label {
     color: aliceblue;
     text-align: center;
+}
+button{
+    width: 140px;
+}
+h1{
+    text-align: center;
+}
+p{
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: larger;
+}
+.card2 {
+    background-color: lightgray;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 10px;
+    text-align: justify;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+}
+label{
+    border-radius: 5px;
 }
